--- a/Contacto.html
+++ b/Contacto.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link href="css/contactos.css" type="text/css" rel="stylesheet">
+       <link rel="icon" type="img/png" href="img/favicon.ico" sizes="16x16">
 </head>
 <body>
     <div class="container">
