--- a/PoliticaPrivacidad.html
+++ b/PoliticaPrivacidad.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="css/PoliticaPrivacidad.css" type="text/css" rel="stylesheet" >
+       <link rel="icon" type="img/png" href="img/favicon.ico" sizes="16x16">
 </head>
 <!DOCTYPE html>
 <html lang="es">
