--- a/Quienes.html
+++ b/Quienes.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¿Quienes somos?</title>
     <link href="css/quienes.css" type="text/css" rel="stylesheet">
+       <link rel="icon" type="img/png" href="img/favicon.ico" sizes="16x16">
 </head>
 <body>
     <div class="container">
