--- a/servicios.html
+++ b/servicios.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Servicios</title>
     <link href="css/servicios.css" type="text/css" rel="stylesheet">
+       <link rel="icon" type="img/png" href="img/favicon.ico" sizes="16x16">
 <body>
     <div class="container">
         <header>
